.metadata/.plugins/org.eclipse.cdt.ui/STM32_uartPrintf.build.log
17:06:03 **** Incremental Build of configuration Debug for project STM32_uartPrintf ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/Dht22.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DSTM32L073xx -DUSE_FULL_LL_DRIVER -DHSE_VALUE=8000000 -DHSE_STARTUP_TIMEOUT=100 -DLSE_STARTUP_TIMEOUT=5000 -DLSE_VALUE=32768 -DMSI_VALUE=2097000 -DHSI_VALUE=16000000 -DLSI_VALUE=37000 -DVDD_VALUE=3300 -DPREFETCH_ENABLE=0 -DINSTRUCTION_CACHE_ENABLE=1 -DDATA_CACHE_ENABLE=1 -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/Dht22.d" -MT"Core/Src/Dht22.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/Dht22.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DSTM32L073xx -DUSE_FULL_LL_DRIVER -DHSE_VALUE=8000000 -DHSE_STARTUP_TIMEOUT=100 -DLSE_STARTUP_TIMEOUT=5000 -DLSE_VALUE=32768 -DMSI_VALUE=2097000 -DHSI_VALUE=16000000 -DLSI_VALUE=37000 -DVDD_VALUE=3300 -DPREFETCH_ENABLE=0 -DINSTRUCTION_CACHE_ENABLE=1 -DDATA_CACHE_ENABLE=1 -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/Dht22.c: In function 'delay_us':
../Core/Src/Dht22.c:21:5: error: 'CoreDebug' undeclared (first use in this function)
   21 |     CoreDebug->DEMCR |= CoreDebug_DEMCR_TRCENA_Msk;
      |     ^~~~~~~~~
../Core/Src/Dht22.c:21:5: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/Dht22.c:21:25: error: 'CoreDebug_DEMCR_TRCENA_Msk' undeclared (first use in this function)
   21 |     CoreDebug->DEMCR |= CoreDebug_DEMCR_TRCENA_Msk;
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/Dht22.c:22:5: error: 'DWT' undeclared (first use in this function)
   22 |     DWT->CYCCNT = 0;
      |     ^~~
../Core/Src/main.c:43:1: error: unknown type name 'DHT_sensor'
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      | ^~~~~~~~~~
In file included from ../Drivers/CMSIS/Device/ST/STM32L0xx/Include/stm32l0xx.h:151,
                 from ../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_ll_crs.h:28,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/main.c:12:
../Drivers/CMSIS/Device/ST/STM32L0xx/Include/stm32l073xx.h:767:29: warning: initialization of 'int' from 'GPIO_TypeDef *' makes integer from pointer without a cast [-Wint-conversion]
  767 | #define GPIOA               ((GPIO_TypeDef *) GPIOA_BASE)
      |                             ^
../Core/Src/main.c:43:19: note: in expansion of macro 'GPIOA'
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      |                   ^~~~~
../Drivers/CMSIS/Device/ST/STM32L0xx/Include/stm32l073xx.h:767:29: note: (near initialization for 'dht')
  767 | #define GPIOA               ((GPIO_TypeDef *) GPIOA_BASE)
      |                             ^
../Core/Src/main.c:43:19: note: in expansion of macro 'GPIOA'
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      |                   ^~~~~
../Drivers/CMSIS/Device/ST/STM32L0xx/Include/stm32l073xx.h:3003:41: warning: excess elements in scalar initializer
 3003 | #define GPIO_BSRR_BS_0                  (0x00000001U)
      |                                         ^
../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_ll_gpio.h:107:44: note: in expansion of macro 'GPIO_BSRR_BS_0'
  107 | #define LL_GPIO_PIN_0                      GPIO_BSRR_BS_0 /*!< Select pin 0 */
      |                                            ^~~~~~~~~~~~~~
../Core/Src/main.c:43:26: note: in expansion of macro 'LL_GPIO_PIN_0'
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      |                          ^~~~~~~~~~~~~
../Drivers/CMSIS/Device/ST/STM32L0xx/Include/stm32l073xx.h:3003:41: note: (near initialization for 'dht')
 3003 | #define GPIO_BSRR_BS_0                  (0x00000001U)
      |                                         ^
../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_ll_gpio.h:107:44: note: in expansion of macro 'GPIO_BSRR_BS_0'
  107 | #define LL_GPIO_PIN_0                      GPIO_BSRR_BS_0 /*!< Select pin 0 */
      |                                            ^~~~~~~~~~~~~~
../Core/Src/main.c:43:26: note: in expansion of macro 'LL_GPIO_PIN_0'
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      |                          ^~~~~~~~~~~~~
../Core/Src/Dht22.c:23:19: error: 'DWT_CTRL_CYCCNTENA_Msk' undeclared (first use in this function)
   23 |     DWT->CTRL  |= DWT_CTRL_CYCCNTENA_Msk;
      |                   ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:43:41: error: 'DHT22' undeclared here (not in a function); did you mean 'DHT22_OK'?
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      |                                         ^~~~~
      |                                         DHT22_OK
../Core/Src/main.c:43:41: warning: excess elements in scalar initializer
../Core/Src/main.c:43:41: note: (near initialization for 'dht')
In file included from ../Core/Inc/main.h:41:
../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_ll_gpio.h:171:44: warning: excess elements in scalar initializer
  171 | #define LL_GPIO_PULL_NO                    (0x00000000U)      /*!< Select I/O no pull */
      |                                            ^
../Core/Src/main.c:43:48: note: in expansion of macro 'LL_GPIO_PULL_NO'
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      |                                                ^~~~~~~~~~~~~~~
../Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_ll_gpio.h:171:44: note: (near initialization for 'dht')
  171 | #define LL_GPIO_PULL_NO                    (0x00000000U)      /*!< Select I/O no pull */
      |                                            ^
../Core/Src/main.c:43:48: note: in expansion of macro 'LL_GPIO_PULL_NO'
   43 | DHT_sensor dht = {GPIOA, LL_GPIO_PIN_0, DHT22, LL_GPIO_PULL_NO};
      |                                                ^~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/Dht22.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:90:3: warning: implicit declaration of function 'RetargetInit' [-Wimplicit-function-declaration]
   90 |   RetargetInit(USART2);
      |   ^~~~~~~~~~~~
../Core/Src/main.c:91:3: warning: implicit declaration of function 'getchInit' [-Wimplicit-function-declaration]
   91 |   getchInit();
      |   ^~~~~~~~~
../Core/Src/main.c:95:3: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   95 |   printf("\r\n=== SYS3046 - GPIO Library ===\r\n");
      |   ^~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   20 | #include "DHT22.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:95:3: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   95 |   printf("\r\n=== SYS3046 - GPIO Library ===\r\n");
      |   ^~~~~~
../Core/Src/main.c:95:3: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/main.c:104:9: warning: implicit declaration of function 'kbhit' [-Wimplicit-function-declaration]
  104 |     if (kbhit())
      |         ^~~~~
../Core/Src/main.c:106:16: warning: implicit declaration of function 'getch' [-Wimplicit-function-declaration]
  106 |       char c = getch();
      |                ^~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

17:06:04 Build Failed. 9 errors, 10 warnings. (took 1s.16ms)

